# lesson-automation-pipeline

./: .gitignore  README.md  app.py  main.py  process_lesson.py  pyproject.toml  students_backup.json  transcribe.py
Track1-Engine-Backend/: app.py  lesson_recap_pipeline.py
recaps/: recap_Sidney.txt
recordings/: test_lesson.m4a
